# Computer-Vision

./: README.md
Bird's eye view projection/: CMakeLists.txt  example_18-01_from_disk.cpp  example_19-01.cpp  hw5.h  main.cpp
CNN performs handwritten digit recognition and object classification/: AlexNet.py  LeNet5.py
Eigen Face/: myreconstruct.cpp  mytest.cpp  mytestRank.cpp  mytrain.cpp  preprocess.cpp
Eigen Face/model/: eigen face 0.pgm  eigen face 1.pgm  eigen face 2.pgm  eigen face 3.pgm  eigen face 4.pgm  eigen face 5.pgm  eigen face 6.pgm  eigen face 7.pgm  eigen face 8.pgm  eigen face 9.pgm  eigen faces.pgm  mean.pgm  modelfile
Harris Corner Detection/: Harris Corner Detection.py
